--- a/README
+++ b/README
@@ -13,42 +13,44 @@ thus saving a great deal of coding effort. Basic data structures such as
 strings, arrays, linked lists and hash tables are also supported.
 
 Runtime requirements:
-  cygwin-1.5.25-15
+  cygwin-1.7.0-44
   libexpat1-2.0.1-1
-  libiconv2-1.12-1
-  zlib-1.2.3-2
+  libgcc1-4.3.2-2
+  libiconv2-1.12-10
+  libstdc++6-4.3.2-2
+  zlib0-1.2.3-10
 (gtk2)
   gstreamer0.10-plugins-base
   gstreamer0.10-plugins-oss
   gstreamer0.10-plugins-ximage
-  libcairo2-1.8.6-1
-  libesd0-0.2.41-1
-  libgdk_pixbuf2.0_0-2.14.7-2
-  libGL1-7.2-2
-  libglib2.0_0-2.18.4-1
-  libgnomeprint2.2_0-2.18.5-1
-  libgnomeprintui2.2_0-2.18.3-1
-  libgstinterfaces0.10_0-0.10.22-1
-  libgstreamer0.10_0-0.10.22-1
-  libgtk2.0_0-2.14.7-2
-  libjpeg62-6b-12
-  libpango1.0_0-1.22.4-1
-  libpng12-1.2.34-1
-  libSM6-1.1.0-1
-  libtiff5-3.8.2-3
-  libX11_6-1.1.5-2
-  libXinerama1-1.0.3-1
+  libcairo2-1.8.6-10
+  libesd0-0.2.41-10
+  libgdk_pixbuf2.0_0-2.16.0-1
+  libGL1-7.2-10
+  libglib2.0_0-2.20.0-1
+  libgnomeprint2.2_0-2.18.6-1
+  libgnomeprintui2.2_0-2.18.4-1
+  libgstinterfaces0.10_0-0.10.22-10
+  libgstreamer0.10_0-0.10.22-10
+  libgtk2.0_0-2.16.0-1
+  libjpeg62-6b-20
+  libpango1.0_0-1.24.0-1
+  libpng12-1.2.35-10
+  libSM6-1.1.0-10
+  libtiff5-3.8.2-10
+  libX11_6-1.2-10
+  libXinerama1-1.0.3-10
 
 Build requirements:
 (besides corresponding -devel packages)
-  autoconf2.5-2.63-1
+  autoconf2.5-2.63-10
   binutils-20080624-2
-  cppunit-1.12.0-1
-  cygport-0.4.3-1
-  gawk-3.1.6-1
-  gcc-core-3.4.4-3
-  gcc-g++-3.4.4-3
-  make-3.81-1
+  cppunit-1.12.1-1
+  cygport-0.9.6-1
+  gawk-3.1.6-2
+  gcc4-core-4.3.2-2
+  gcc4-g++-4.3.2-2
+  make-3.81-2
   pkg-config-0.23a-2
   sed-4.1.5-2
 
@@ -68,10 +70,10 @@ Build instructions:
   cygport ./wxWidgets2.8-2.8.9.2-X.cygport all
 
 This will create:
-  /usr/src/libwxbase2.8-devel-2.8.9.2-X.tar.bz2
-  /usr/src/libwxbase2.8_0-2.8.9.2-X.tar.bz2
-  /usr/src/libwxgtk2.8-devel-2.8.9.2-X.tar.bz2
-  /usr/src/libwxgtk2.8_0-2.8.9.2-X.tar.bz2
+  /usr/src/libwx_baseu2.8-devel-2.8.9.2-X.tar.bz2
+  /usr/src/libwx_baseu2.8_0-2.8.9.2-X.tar.bz2
+  /usr/src/libwx_gtk2u2.8-devel-2.8.9.2-X.tar.bz2
+  /usr/src/libwx_gtk2u2.8_0-2.8.9.2-X.tar.bz2
   /usr/src/python-wx2.8-2.8.9.2-X.tar.bz2
   /usr/src/wxWidgets2.8-2.8.9.2-X-src.tar.bz2
 
@@ -82,32 +84,8 @@ cygcheck -l PACKAGE [PACKAGE2 ...]
 
 Port Notes:
 
------ version 2.8.9.2-1 -----
-Version bump.
-
------ version 2.8.9.1-2 -----
-Rebuilt C++ libraries and Python bindings together.
-Enabled wxDisplay (Xinerama) support.
-
------ version 2.8.9.1-1 -----
-Version bump.
-
------ version 2.8.8.0-1 -----
-Version bump.
-
------ version 2.8.7-1 -----
-Version bump.
-Disabled unused motif and x11univ ports.
-Disabled GnomeVFS support as it lead to crashes on exit.
-
------ version 2.8.6-1 -----
-Version bump.
-
------ version 2.8.5-1 -----
-Version bump.
-
------ version 2.8.4-1 -----
-Initial release of 2.8 branch for Cygwin.
+----- version 2.8.9.2-10 -----
+Initial release of 2.8 branch for Cygwin 1.7.
 
 
 Cygwin port maintained by:
